--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,16 @@
 {
   "name": "purescript-aws-serverless-express",
+  "license": "MPL-2.0",
   "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
     "output"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/purescript/purescript-prelude.git"
+  },
   "dependencies": {
     "purescript-prelude": "^3.1.1",
     "purescript-console": "^3.0.0",
