--- a/bower.json
+++ b/bower.json
@@ -12,12 +12,13 @@
     "url": "git://github.com/lpil/purescript-aws-lambda-express.git"
   },
   "dependencies": {
-    "purescript-prelude": "^3.1.1",
-    "purescript-console": "^3.0.0",
-    "purescript-express": "^0.6.0",
-    "purescript-eff": "^3.1.0"
+    "purescript-prelude": "^4.1.0",
+    "purescript-console": "^4.1.0",
+    "purescript-express": "^0.7.0",
+    "purescript-effect": "^2.0.0",
+    "purescript-exceptions": "^4.0.0"
   },
   "devDependencies": {
-    "purescript-psci-support": "^3.0.0"
+    "purescript-psci-support": "^4.0.0"
   }
 }
