--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "express": "^4.16.4"
   },
   "devDependencies": {
+    "bower": "^1.8.4",
+    "pulp": "^12.3.0",
+    "purescript": "^0.12.0",
     "serverless": "^1.24.0"
   }
 }
